[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/Lobby/LobbyRedesign.cs" type="Script" id=1]
[ext_resource path="res://Scripts/Lobby/Local.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Lobby/QuitButton/Quit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/MenuRoot.gd" type="Script" id=4]
[ext_resource path="res://Scenes/InputMap/InputMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scripts/Save.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Lobby/LocalMain.gd" type="Script" id=8]
[ext_resource path="res://Themes/startmenu.theme" type="Theme" id=9]
[ext_resource path="res://Scenes/Managers/LocalManager.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Managers/TrainingManager.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Managers/GGRSManager.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Managers/SyncTestManager.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Managers/AIManager.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scripts/Lobby/LobbySounds.gd" type="Script" id=15]
[ext_resource path="res://Fonts/small-ui-font.tres" type="DynamicFont" id=16]
[ext_resource path="res://Scenes/AVConfigMenu.gd" type="Script" id=17]
[ext_resource path="res://Scenes/Resolution.gd" type="Script" id=18]
[ext_resource path="res://Themes/Subtitles.tres" type="Theme" id=19]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

// Amount of detail.
uniform int octaves = 4;

// Opacity of the output fog.
uniform float starting_amplitude: hint_range(0.0, 0.5) = 0.5;

// Rate of pattern within the fog.
uniform float starting_frequency = 1.0;

// Shift towards transparency (clamped) for sparser fog.
uniform float shift: hint_range(-1.0, 0.0) = -0.2;

// Direction and speed of travel.
uniform vec2 velocity = vec2(1.0, 1.0);

// Color of the fog.
uniform vec4 fog_color: hint_color = vec4(0.0, 0.0, 0.0, 1.0);

// Noise texture; OpenSimplexNoise is great, but any filtered texture is fine.
uniform sampler2D noise;

float rand(vec2 uv) {
	float amplitude = starting_amplitude;
	float frequency = starting_frequency;
	float output = 0.0;
	for (int i = 0; i < octaves; i++) {
		output += texture(noise, uv * frequency).x * amplitude;
		amplitude /= 2.0;
		frequency *= 2.0;
	}
	return clamp(output + shift, 0.0, 1.0);
}

void fragment() {
	vec2 motion = vec2(rand(UV + TIME * starting_frequency * velocity));
	COLOR = mix(vec4(0.0), fog_color, rand(UV + motion));
}"

[sub_resource type="OpenSimplexNoise" id=4]
seed = 2
octaves = 6
period = 141.8
persistence = 0.578
lacunarity = 2.23

[sub_resource type="NoiseTexture" id=5]
noise = SubResource( 4 )

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 3 )
shader_param/octaves = 2
shader_param/starting_amplitude = 0.5
shader_param/starting_frequency = 1.188
shader_param/shift = -0.088
shader_param/velocity = Vector2( 1, 1 )
shader_param/fog_color = Color( 0.156863, 0.12549, 0.215686, 1 )
shader_param/noise = SubResource( 5 )

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu/CenterContainer/MainMenuButtons/GwSTitle:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -200 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenu/CenterContainer/MainMenuButtons/Local:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainMenu/CenterContainer/MainMenuButtons/NetPlay:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainMenu/CenterContainer/MainMenuButtons/Quit:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.7, 3.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MainMenu/CenterContainer/MainMenuButtons/ButtonConfig:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MainMenu/CenterContainer/MainMenuButtons/AVConfig:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Theme" id=2]
default_font = ExtResource( 16 )

[node name="LobbyRedesign" type="Node2D"]
position = Vector2( 2, 0 )
script = ExtResource( 1 )
localManager = ExtResource( 10 )
trainingManager = ExtResource( 11 )
aiManager = ExtResource( 14 )
ggrsManager = ExtResource( 12 )
syncTestManager = ExtResource( 13 )

[node name="InputMenu" type="CanvasLayer" parent="."]
layer = 9

[node name="InputMenu" parent="InputMenu" instance=ExtResource( 5 )]

[node name="MenuRoot" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 270.0
rect_min_size = Vector2( 480, 270 )
theme = ExtResource( 9 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MenuRoot"]
material = SubResource( 6 )
margin_left = -4.0
margin_top = -12.0
margin_right = 480.0
margin_bottom = 272.0
color = Color( 0.141176, 0.180392, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="MenuRoot"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuRoot"]
anims/fade_in = SubResource( 1 )

[node name="MainMenu" type="MarginContainer" parent="MenuRoot"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MenuRoot/MainMenu"]
margin_right = 480.0
margin_bottom = 270.0
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="MainMenuButtons" type="VBoxContainer" parent="MenuRoot/MainMenu/CenterContainer"]
margin_left = 138.0
margin_top = 59.0
margin_right = 342.0
margin_bottom = 210.0
mouse_filter = 0
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GwSTitle" type="Label" parent="MenuRoot/MainMenu/CenterContainer/MainMenuButtons"]
margin_right = 204.0
margin_bottom = 16.0
theme = ExtResource( 19 )
text = "Girls with Swords"

[node name="Local" type="ToolButton" parent="MenuRoot/MainMenu/CenterContainer/MainMenuButtons"]
margin_top = 26.0
margin_right = 204.0
margin_bottom = 43.0
size_flags_vertical = 4
theme = ExtResource( 9 )
action_mode = 0
text = "Local"
flat = false
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NetPlay" type="ToolButton" parent="MenuRoot/MainMenu/CenterContainer/MainMenuButtons"]
margin_top = 53.0
margin_right = 204.0
margin_bottom = 70.0
text = "Net Play"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonConfig" type="ToolButton" parent="MenuRoot/MainMenu/CenterContainer/MainMenuButtons"]
margin_top = 80.0
margin_right = 204.0
margin_bottom = 97.0
text = "Button Configuration"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AVConfig" type="ToolButton" parent="MenuRoot/MainMenu/CenterContainer/MainMenuButtons"]
margin_top = 107.0
margin_right = 204.0
margin_bottom = 124.0
text = "Adult Video"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SyncTest" type="Button" parent="MenuRoot/MainMenu/CenterContainer/MainMenuButtons"]
visible = false
margin_top = 125.0
margin_right = 272.0
margin_bottom = 148.0
text = "Sync Test"

[node name="Quit" parent="MenuRoot/MainMenu/CenterContainer/MainMenuButtons" instance=ExtResource( 3 )]
margin_top = 134.0
margin_right = 204.0
margin_bottom = 151.0

[node name="LocalMenu" type="MarginContainer" parent="MenuRoot"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 480.0
margin_right = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalButtons" type="VBoxContainer" parent="MenuRoot/LocalMenu"]
margin_left = 90.0
margin_top = 50.0
margin_right = 390.0
margin_bottom = 220.0
rect_min_size = Vector2( 300, 170 )
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalLabel" type="Label" parent="MenuRoot/LocalMenu/LocalButtons"]
margin_top = 35.0
margin_right = 300.0
margin_bottom = 51.0
theme = ExtResource( 19 )
text = "Local Mode"
align = 1

[node name="Local" type="Button" parent="MenuRoot/LocalMenu/LocalButtons"]
margin_top = 55.0
margin_right = 300.0
margin_bottom = 72.0
text = "Local Match"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Training" type="Button" parent="MenuRoot/LocalMenu/LocalButtons"]
margin_top = 76.0
margin_right = 300.0
margin_bottom = 93.0
text = "Training Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPU" type="Button" parent="MenuRoot/LocalMenu/LocalButtons"]
margin_top = 97.0
margin_right = 300.0
margin_bottom = 114.0
text = "CPU Match"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="ToolButton" parent="MenuRoot/LocalMenu/LocalButtons"]
margin_top = 118.0
margin_right = 300.0
margin_bottom = 135.0
text = "Back"

[node name="NetPlayMenu" type="MarginContainer" parent="MenuRoot"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 480.0
margin_right = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Entries" type="VBoxContainer" parent="MenuRoot/NetPlayMenu"]
margin_left = 90.0
margin_top = 50.0
margin_right = 390.0
margin_bottom = 220.0
rect_min_size = Vector2( 300, 170 )
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
dropdown_path = NodePath("FriendList")
confirmremove_path = NodePath("../ConfirmationDialog")

[node name="HBoxContainer2" type="HBoxContainer" parent="MenuRoot/NetPlayMenu/Entries"]
margin_right = 300.0
margin_bottom = 17.0

[node name="NetPlayLabel" type="Label" parent="MenuRoot/NetPlayMenu/Entries/HBoxContainer2"]
margin_right = 96.0
margin_bottom = 16.0
theme = ExtResource( 19 )
text = "Net Play"

[node name="AutoConnect" type="Button" parent="MenuRoot/NetPlayMenu/Entries/HBoxContainer2"]
margin_left = 100.0
margin_right = 300.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "AutoConnect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NetPlayButtons" type="HBoxContainer" parent="MenuRoot/NetPlayMenu/Entries"]
margin_top = 21.0
margin_right = 300.0
margin_bottom = 38.0

[node name="Host" type="Button" parent="MenuRoot/NetPlayMenu/Entries/NetPlayButtons"]
margin_right = 148.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="MenuRoot/NetPlayMenu/Entries/NetPlayButtons"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FriendName" type="LineEdit" parent="MenuRoot/NetPlayMenu/Entries"]
margin_top = 42.0
margin_right = 300.0
margin_bottom = 65.0
placeholder_text = "Enter Friend Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentIp" type="LineEdit" parent="MenuRoot/NetPlayMenu/Entries"]
margin_top = 69.0
margin_right = 300.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 96, 40 )
placeholder_text = "Enter Opponent Ip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MenuRoot/NetPlayMenu/Entries"]
margin_top = 96.0
margin_right = 300.0
margin_bottom = 113.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddFriend" type="Button" parent="MenuRoot/NetPlayMenu/Entries/HBoxContainer"]
margin_right = 148.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Add Friend"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveFriend" type="Button" parent="MenuRoot/NetPlayMenu/Entries/HBoxContainer"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Remove Friend"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadFriend" type="Button" parent="MenuRoot/NetPlayMenu/Entries"]
visible = false
margin_top = 180.0
margin_right = 300.0
margin_bottom = 200.0
text = "Load Friends..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FriendList" type="OptionButton" parent="MenuRoot/NetPlayMenu/Entries"]
margin_top = 117.0
margin_right = 300.0
margin_bottom = 134.0
text = "Item 0"
align = 1

[node name="HostTest" type="Button" parent="MenuRoot/NetPlayMenu/Entries"]
visible = false
margin_top = 176.0
margin_right = 300.0
margin_bottom = 196.0
text = "HOSTTEST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinTest" type="Button" parent="MenuRoot/NetPlayMenu/Entries"]
visible = false
margin_top = 176.0
margin_right = 300.0
margin_bottom = 196.0
text = "JOINTEST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="ToolButton" parent="MenuRoot/NetPlayMenu/Entries"]
margin_top = 138.0
margin_right = 300.0
margin_bottom = 155.0
text = "Back"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="MenuRoot/NetPlayMenu"]
margin_left = 40.0
margin_top = 65.0
margin_right = 440.0
margin_bottom = 205.0
rect_min_size = Vector2( 400, 140 )
focus_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AVConfigMenu" type="MarginContainer" parent="MenuRoot"]
visible = false
margin_left = 480.0
margin_right = 960.0
margin_bottom = 270.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AVConfigButtons" type="VBoxContainer" parent="MenuRoot/AVConfigMenu"]
margin_left = 90.0
margin_top = 24.0
margin_right = 390.0
margin_bottom = 246.0
rect_min_size = Vector2( 300, 170 )
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioLabel" type="Label" parent="MenuRoot/AVConfigMenu/AVConfigButtons"]
margin_right = 300.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 6 )
text = "Audio"
align = 1

[node name="MasterVolumeLabel" type="Label" parent="MenuRoot/AVConfigMenu/AVConfigButtons"]
margin_top = 20.0
margin_right = 300.0
margin_bottom = 37.0
theme = SubResource( 2 )
text = "Master Volume"

[node name="MasterVolume" type="HSlider" parent="MenuRoot/AVConfigMenu/AVConfigButtons"]
margin_top = 41.0
margin_right = 300.0
margin_bottom = 57.0
min_value = -50.0
max_value = 0.0
step = 2.5
tick_count = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeLabel" type="Label" parent="MenuRoot/AVConfigMenu/AVConfigButtons"]
margin_top = 61.0
margin_right = 300.0
margin_bottom = 78.0
theme = SubResource( 2 )
text = "Music Volume"

[node name="MusicVolume" type="HSlider" parent="MenuRoot/AVConfigMenu/AVConfigButtons"]
margin_top = 82.0
margin_right = 300.0
margin_bottom = 98.0
min_value = -50.0
max_value = 0.0
step = 2.5
tick_count = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameFXVoumeLabel" type="Label" parent="MenuRoot/AVConfigMenu/AVConfigButtons"]
margin_top = 102.0
margin_right = 300.0
margin_bottom = 119.0
theme = SubResource( 2 )
text = "Game FX"

[node name="GameFXVolume" type="HSlider" parent="MenuRoot/AVConfigMenu/AVConfigButtons"]
margin_top = 123.0
margin_right = 300.0
margin_bottom = 139.0
min_value = -50.0
max_value = 0.0
step = 2.5
tick_count = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIVolumeLabel" type="Label" parent="MenuRoot/AVConfigMenu/AVConfigButtons"]
margin_top = 143.0
margin_right = 300.0
margin_bottom = 160.0
theme = SubResource( 2 )
text = "UI"

[node name="UIVolume" type="HSlider" parent="MenuRoot/AVConfigMenu/AVConfigButtons"]
margin_top = 164.0
margin_right = 300.0
margin_bottom = 180.0
min_value = -50.0
max_value = 0.0
step = 2.5
tick_count = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoLabel" type="Label" parent="MenuRoot/AVConfigMenu/AVConfigButtons"]
visible = false
margin_top = 184.0
margin_right = 300.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 6 )
text = "Video"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MenuRoot/AVConfigMenu/AVConfigButtons"]
margin_top = 184.0
margin_right = 300.0
margin_bottom = 207.0

[node name="ResolutionLabel" type="Label" parent="MenuRoot/AVConfigMenu/AVConfigButtons/HBoxContainer"]
margin_top = 3.0
margin_right = 64.0
margin_bottom = 20.0
theme = SubResource( 2 )
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="MenuRoot/AVConfigMenu/AVConfigButtons/HBoxContainer"]
margin_left = 68.0
margin_right = 86.0
margin_bottom = 23.0
script = ExtResource( 18 )
optionButtonPath = NodePath(".")

[node name="BackButton" type="ToolButton" parent="MenuRoot/AVConfigMenu/AVConfigButtons"]
margin_top = 211.0
margin_right = 300.0
margin_bottom = 234.0
text = "Back"

[node name="LobbySounds" type="AudioStreamPlayer" parent="."]
bus = "UI"
script = ExtResource( 15 )

[connection signal="focus_exited" from="MenuRoot/MainMenu/CenterContainer/MainMenuButtons/Local" to="LobbySounds" method="focus_entered"]
[connection signal="pressed" from="MenuRoot/MainMenu/CenterContainer/MainMenuButtons/Local" to="LobbySounds" method="play_sound" binds= [ "select" ]]
[connection signal="pressed" from="MenuRoot/MainMenu/CenterContainer/MainMenuButtons/Local" to="MenuRoot" method="_on_Local_pressed"]
[connection signal="focus_exited" from="MenuRoot/MainMenu/CenterContainer/MainMenuButtons/NetPlay" to="LobbySounds" method="focus_entered"]
[connection signal="pressed" from="MenuRoot/MainMenu/CenterContainer/MainMenuButtons/NetPlay" to="LobbySounds" method="play_sound" binds= [ "select" ]]
[connection signal="pressed" from="MenuRoot/MainMenu/CenterContainer/MainMenuButtons/NetPlay" to="MenuRoot" method="_on_NetPlay_pressed"]
[connection signal="focus_exited" from="MenuRoot/MainMenu/CenterContainer/MainMenuButtons/ButtonConfig" to="LobbySounds" method="focus_entered"]
[connection signal="pressed" from="MenuRoot/MainMenu/CenterContainer/MainMenuButtons/ButtonConfig" to="LobbySounds" method="play_sound" binds= [ "select" ]]
[connection signal="pressed" from="MenuRoot/MainMenu/CenterContainer/MainMenuButtons/ButtonConfig" to="." method="_on_ButtonConfig_pressed"]
[connection signal="focus_exited" from="MenuRoot/MainMenu/CenterContainer/MainMenuButtons/AVConfig" to="LobbySounds" method="focus_entered"]
[connection signal="pressed" from="MenuRoot/MainMenu/CenterContainer/MainMenuButtons/AVConfig" to="LobbySounds" method="play_sound" binds= [ "select" ]]
[connection signal="pressed" from="MenuRoot/MainMenu/CenterContainer/MainMenuButtons/AVConfig" to="MenuRoot" method="_on_AVConfig_pressed"]
[connection signal="button_down" from="MenuRoot/MainMenu/CenterContainer/MainMenuButtons/SyncTest" to="." method="OnSyncTestButtonDown"]
[connection signal="focus_exited" from="MenuRoot/MainMenu/CenterContainer/MainMenuButtons/SyncTest" to="LobbySounds" method="focus_entered"]
[connection signal="focus_exited" from="MenuRoot/MainMenu/CenterContainer/MainMenuButtons/Quit" to="LobbySounds" method="focus_entered"]
[connection signal="button_down" from="MenuRoot/LocalMenu/LocalButtons/Local" to="LobbySounds" method="play_sound" binds= [ "select" ]]
[connection signal="button_down" from="MenuRoot/LocalMenu/LocalButtons/Local" to="." method="OnLocalButtonDown"]
[connection signal="focus_exited" from="MenuRoot/LocalMenu/LocalButtons/Local" to="LobbySounds" method="focus_entered"]
[connection signal="button_down" from="MenuRoot/LocalMenu/LocalButtons/Training" to="LobbySounds" method="play_sound" binds= [ "select" ]]
[connection signal="button_down" from="MenuRoot/LocalMenu/LocalButtons/Training" to="." method="OnTrainingButtonDown"]
[connection signal="focus_exited" from="MenuRoot/LocalMenu/LocalButtons/Training" to="LobbySounds" method="focus_entered"]
[connection signal="button_down" from="MenuRoot/LocalMenu/LocalButtons/CPU" to="LobbySounds" method="play_sound" binds= [ "select" ]]
[connection signal="button_down" from="MenuRoot/LocalMenu/LocalButtons/CPU" to="." method="OnCPUButtonDown"]
[connection signal="focus_exited" from="MenuRoot/LocalMenu/LocalButtons/CPU" to="LobbySounds" method="focus_entered"]
[connection signal="focus_exited" from="MenuRoot/LocalMenu/LocalButtons/BackButton" to="LobbySounds" method="focus_entered"]
[connection signal="pressed" from="MenuRoot/LocalMenu/LocalButtons/BackButton" to="LobbySounds" method="play_sound" binds= [ "cancel" ]]
[connection signal="pressed" from="MenuRoot/LocalMenu/LocalButtons/BackButton" to="MenuRoot" method="_on_BackButton_pressed"]
[connection signal="button_down" from="MenuRoot/NetPlayMenu/Entries/HBoxContainer2/AutoConnect" to="LobbySounds" method="play_sound" binds= [ "select" ]]
[connection signal="button_down" from="MenuRoot/NetPlayMenu/Entries/HBoxContainer2/AutoConnect" to="." method="OnAutoConnectDown"]
[connection signal="focus_exited" from="MenuRoot/NetPlayMenu/Entries/HBoxContainer2/AutoConnect" to="LobbySounds" method="focus_entered"]
[connection signal="button_down" from="MenuRoot/NetPlayMenu/Entries/NetPlayButtons/Host" to="LobbySounds" method="play_sound" binds= [ "select" ]]
[connection signal="button_down" from="MenuRoot/NetPlayMenu/Entries/NetPlayButtons/Host" to="." method="OnHostButtonDown"]
[connection signal="focus_exited" from="MenuRoot/NetPlayMenu/Entries/NetPlayButtons/Host" to="LobbySounds" method="focus_entered"]
[connection signal="button_down" from="MenuRoot/NetPlayMenu/Entries/NetPlayButtons/Join" to="LobbySounds" method="play_sound" binds= [ "select" ]]
[connection signal="button_down" from="MenuRoot/NetPlayMenu/Entries/NetPlayButtons/Join" to="." method="OnJoinButtonDown"]
[connection signal="focus_exited" from="MenuRoot/NetPlayMenu/Entries/NetPlayButtons/Join" to="LobbySounds" method="focus_entered"]
[connection signal="focus_exited" from="MenuRoot/NetPlayMenu/Entries/FriendName" to="LobbySounds" method="focus_entered"]
[connection signal="focus_exited" from="MenuRoot/NetPlayMenu/Entries/OpponentIp" to="LobbySounds" method="focus_entered"]
[connection signal="button_down" from="MenuRoot/NetPlayMenu/Entries/HBoxContainer/AddFriend" to="MenuRoot/NetPlayMenu/Entries" method="_on_AddFriend_button_down"]
[connection signal="focus_exited" from="MenuRoot/NetPlayMenu/Entries/HBoxContainer/AddFriend" to="LobbySounds" method="focus_entered"]
[connection signal="focus_entered" from="MenuRoot/NetPlayMenu/Entries/HBoxContainer/RemoveFriend" to="LobbySounds" method="focus_entered"]
[connection signal="pressed" from="MenuRoot/NetPlayMenu/Entries/HBoxContainer/RemoveFriend" to="MenuRoot/NetPlayMenu/Entries" method="_on_RemoveFriend_pressed"]
[connection signal="focus_exited" from="MenuRoot/NetPlayMenu/Entries/LoadFriend" to="LobbySounds" method="focus_entered"]
[connection signal="focus_exited" from="MenuRoot/NetPlayMenu/Entries/FriendList" to="LobbySounds" method="focus_entered"]
[connection signal="pressed" from="MenuRoot/NetPlayMenu/Entries/FriendList" to="MenuRoot/NetPlayMenu/Entries" method="_on_FriendList_pressed"]
[connection signal="button_down" from="MenuRoot/NetPlayMenu/Entries/HostTest" to="." method="OnHostTestButtonDown"]
[connection signal="focus_exited" from="MenuRoot/NetPlayMenu/Entries/HostTest" to="LobbySounds" method="focus_entered"]
[connection signal="button_down" from="MenuRoot/NetPlayMenu/Entries/JoinTest" to="." method="OnJoinTestButtonDown"]
[connection signal="focus_exited" from="MenuRoot/NetPlayMenu/Entries/JoinTest" to="LobbySounds" method="focus_entered"]
[connection signal="focus_exited" from="MenuRoot/NetPlayMenu/Entries/BackButton" to="LobbySounds" method="focus_entered"]
[connection signal="pressed" from="MenuRoot/NetPlayMenu/Entries/BackButton" to="LobbySounds" method="play_sound" binds= [ "cancel" ]]
[connection signal="pressed" from="MenuRoot/NetPlayMenu/Entries/BackButton" to="MenuRoot" method="_on_BackButton_pressed"]
[connection signal="hide" from="MenuRoot/NetPlayMenu/ConfirmationDialog" to="MenuRoot/NetPlayMenu/Entries" method="_on_ConfirmationDialog_hide"]
[connection signal="focus_exited" from="MenuRoot/AVConfigMenu/AVConfigButtons/MasterVolume" to="LobbySounds" method="focus_entered"]
[connection signal="value_changed" from="MenuRoot/AVConfigMenu/AVConfigButtons/MasterVolume" to="MenuRoot" method="_on_MasterVolume_value_changed"]
[connection signal="focus_exited" from="MenuRoot/AVConfigMenu/AVConfigButtons/MusicVolume" to="LobbySounds" method="focus_entered"]
[connection signal="value_changed" from="MenuRoot/AVConfigMenu/AVConfigButtons/MusicVolume" to="MenuRoot" method="_on_MusicVolume_value_changed"]
[connection signal="focus_exited" from="MenuRoot/AVConfigMenu/AVConfigButtons/GameFXVolume" to="LobbySounds" method="focus_entered"]
[connection signal="value_changed" from="MenuRoot/AVConfigMenu/AVConfigButtons/GameFXVolume" to="MenuRoot" method="_on_GameFXVolume_value_changed"]
[connection signal="focus_exited" from="MenuRoot/AVConfigMenu/AVConfigButtons/UIVolume" to="LobbySounds" method="focus_entered"]
[connection signal="value_changed" from="MenuRoot/AVConfigMenu/AVConfigButtons/UIVolume" to="MenuRoot" method="_on_UIVolume_value_changed"]
[connection signal="focus_exited" from="MenuRoot/AVConfigMenu/AVConfigButtons/BackButton" to="LobbySounds" method="focus_entered"]
[connection signal="pressed" from="MenuRoot/AVConfigMenu/AVConfigButtons/BackButton" to="LobbySounds" method="play_sound" binds= [ "cancel" ]]
[connection signal="pressed" from="MenuRoot/AVConfigMenu/AVConfigButtons/BackButton" to="MenuRoot" method="_on_BackButton_pressed"]
[connection signal="pressed" from="MenuRoot/AVConfigMenu/AVConfigButtons/BackButton" to="MenuRoot/AVConfigMenu" method="_on_BackButton_pressed"]
